--- a/radon_transform.ipynb
+++ b/radon_transform.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import scipy.signal as signal\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -13,7 +14,9 @@
     "from skimage import filters\n",
     "from scipy import fftpack\n",
     "from sklearn import metrics\n",
-    "import pydicom as dicom"
+    "import pydicom as dicom\n",
+    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
+    "import ipywidgets as widgets"
    ]
   },
   {
@@ -59,6 +62,7 @@
     "        return filtered\n",
     "\n",
     "    def inverse_transform(self, sinogram):\n",
+    "        image_steps = []\n",
     "        x_circle, y_circle, r_circle = self.circle\n",
     "        size = round(2*r_circle)+2\n",
     "        x, y = sinogram.shape\n",
@@ -78,14 +82,17 @@
     "                xx, yy = RadonTransform.bresenham(x1,x2,y1,y2)\n",
     "                image[xx,yy]+=sinogram[s,d]\n",
     "                pixels[xx,yy]+=1\n",
-    "        return self.normalize_pixels(image, pixels, size)\n",
+    "            image_steps.append(self.normalize_pixels(image, pixels, size))\n",
+    "        return self.normalize_pixels(image, pixels, size), image_steps\n",
     "    \n",
     "    def normalize_pixels(self, image, pixels, size):\n",
+    "        image_cp = image.copy()\n",
+    "        pixels_cp = pixels.copy()\n",
     "        for x in range(size):\n",
     "            for y in range(size):\n",
-    "                if pixels[x,y] > 0:\n",
-    "                    image[x,y] = image[x,y]/ pixels[x,y]\n",
-    "        return image\n",
+    "                if pixels_cp[x,y] > 0:\n",
+    "                    image_cp[x,y] = image_cp[x,y]/ pixels_cp[x,y]\n",
+    "        return image_cp\n",
     "\n",
     "    def get_circle(self, image):\n",
     "        x, y = image.shape\n",
@@ -93,18 +100,6 @@
     "            self.circle = (x//2, y//2, y//2-1)\n",
     "        else:\n",
     "            self.circle = (x//2, y//2, x//2-1) \n",
-    "\n",
-    "    def fft_transform(self, image):\n",
-    "        g_image = filters.gaussian(image, sigma=1)\n",
-    "\n",
-    "        image_fft = fftpack.fft2(g_image)\n",
-    "        fraction = 0.2\n",
-    "        image_fft2 = image_fft.copy()\n",
-    "        x, y = image_fft2.shape\n",
-    "        image_fft2[int(x * fraction): int(x * (1 - fraction))] = 0\n",
-    "        image_fft2[:, int(y * fraction):int(y * (1 - fraction))] = 0\n",
-    "        image_f = fftpack.ifft2(image_fft2).real\n",
-    "        return image_f\n",
     "\n",
     "    def get_mask(self):\n",
     "        mask_size = int(np.floor(self.detectors / 2))\n",
@@ -166,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,10 +175,9 @@
     "    def add_padding(image):\n",
     "        x, y = image.shape\n",
     "        pad_len = None\n",
-    "        if x == y:\n",
-    "            r = Utils.get_new_radius(image)\n",
-    "            new_len = 2 * r\n",
-    "            pad_len = int((new_len - x) / 2 + 10)\n",
+    "        r = Utils.get_new_radius(image)\n",
+    "        new_len = 2 * r\n",
+    "        pad_len = int((new_len - x) / 2 + 10)            \n",
     "        image_with_padding = np.pad(image, pad_len, 'constant')\n",
     "        return image_with_padding\n",
     "\n",
@@ -196,6 +190,19 @@
     "        z = x ** 2 + y ** 2\n",
     "        r = np.ceil(np.sqrt(z))\n",
     "        return r\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def fft_transform(image):\n",
+    "        g_image = filters.gaussian(image, sigma=1)\n",
+    "\n",
+    "        image_fft = fftpack.fft2(g_image)\n",
+    "        fraction = 0.2\n",
+    "        image_fft2 = image_fft.copy()\n",
+    "        x, y = image_fft2.shape\n",
+    "        image_fft2[int(x * fraction): int(x * (1 - fraction))] = 0\n",
+    "        image_fft2[:, int(y * fraction):int(y * (1 - fraction))] = 0\n",
+    "        image_f = fftpack.ifft2(image_fft2).real\n",
+    "        return image_f\n",
     "\n",
     "    @staticmethod\n",
     "    def RMSE(image, inversed_image):\n",
@@ -217,13 +224,24 @@
     "        print(dataset.ImageComments)\n",
     "\n",
     "    @staticmethod\n",
-    "    def write_dicom(filename, file, name, date, comments):\n",
-    "        dataset = dicom.dcmread(file)\n",
-    "        dataset.PatientName = name\n",
-    "        dataset.StudyDate = date\n",
-    "        dataset.ImageComments = comments\n",
-    "        dataset.save_as(filename)\n",
-    "        print('DICOM file saved')\n"
+    "    def write_dicom(file, filename, name, date, comments):\n",
+    "        ds = dicom.dcmread(filename)\n",
+    "        ds.PatientName = name\n",
+    "        ds.StudyDate = date\n",
+    "        ds.ImageComments = comments\n",
+    "        ds.PixelData = file.tobytes()\n",
+    "        ds.Rows = file.shape[0]\n",
+    "        ds.Columns = file.shape[1]\n",
+    "        ds.save_as(filename)\n",
+    "        print('DICOM file saved')\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def interact(steps, inversed_images, filtering = True):\n",
+    "        inversed = inversed_images[steps-1]\n",
+    "        if filtering:\n",
+    "            inversed = Utils.fft_transform(inversed)\n",
+    "        plt.imshow(inversed)\n",
+    "        plt.show()"
    ]
   },
   {
@@ -245,9 +263,12 @@
     }
    ],
    "source": [
+    "alpha = 1\n",
+    "detectors = 180\n",
+    "l_angle = 180\n",
     "image = Utils.read_image(\"Shepp_logan.png\")\n",
     "image_with_padding = Utils.add_padding(image)\n",
-    "radon = RadonTransform(1,180,180)\n",
+    "radon = RadonTransform(alpha,detectors,l_angle)\n",
     "radon_image = radon.transform(image_with_padding)\n",
     "plt.figure()\n",
     "plt.imshow(radon_image)\n",
@@ -285,6 +306,15 @@
    "metadata": {
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "inversed_image, image_steps = radon.inverse_transform(filtered_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -300,15 +330,14 @@
     }
    ],
    "source": [
-    "inversed_image = radon.inverse_transform(filtered_image)\n",
     "plt.figure()\n",
-    "plt.imshow(inversed_image)\n",
+    "plt.imshow(image_steps[179])\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +354,7 @@
     }
    ],
    "source": [
-    "fft_image = radon.fft_transform(inversed_image)\n",
+    "fft_image = Utils.fft_transform(inversed_image)\n",
     "plt.figure()\n",
     "plt.imshow(fft_image)\n",
     "plt.show()"
@@ -333,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -362,31 +391,52 @@
     }
    ],
    "source": [
-    "file = 'test.dcm'\n",
-    "patient_name = 'Jan Kowalski'\n",
-    "image_comments = 'Komentarz do zdjecia'\n",
-    "date = '20191008'\n",
-    "Utils.write_dicom(file, file, patient_name, date, image_comments)"
+    "Utils.write_dicom(image_with_padding, 'file.dcm', \"Jan Kowalski\", \"20200323\", \"komentarz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test.dcm\n",
+      "file.dcm\n",
       "Jan Kowalski\n",
-      "20191008\n",
-      "Komentarz do zdjecia\n"
+      "20200323\n",
+      "komentarz\n"
      ]
     }
    ],
    "source": [
-    "Utils.read_dicom(file)"
+    "Utils.read_dicom('file.dcm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9f186fcc3efc4440957cab989275fe6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=180, description='steps', max=180), Checkbox(value=True, description='fi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "steps = round(180/alpha)\n",
+    "interact(Utils.interact, steps=widgets.IntSlider(min=0, max=steps, step=1, value=steps), inversed_images=fixed(image_steps), filtering=True);"
    ]
   }
  ],
@@ -395,7 +445,7 @@
   "kernelspec": {
    "display_name": "Python 3.6.9 64-bit",
    "language": "python",
-   "name": "python36964bitc7211c178f254f1bbd46493ea90e16a5"
+   "name": "python36964bitcd0ceb4c1eea4ae3b482718b1420585a"
   },
   "language_info": {
    "codemirror_mode": {
